--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 selection/answer.csv
-"selection/codenation - Regression Techniques.ipynb"
+selection/codenation - Regression Techniques.ipynb
+selection/codenation_teste.ipynb
