--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 selection/answer.csv
 selection/codenation - Regression Techniques.ipynb
 selection/codenation_teste.ipynb
+escondidinho/*
+codenation_windows/*
